--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=8080
-#rabbitmq settings for Spring Cloud Stream to use
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+
+# kafka setting
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
 spring.cloud.stream.bindings.output.destination=posted
 spring.cloud.stream.default.contentType=application/json
