Reactive with 2 messages being published.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8080
 
 # kafka setting
 spring.cloud.stream.kafka.binder.brokers=localhost:9092
-spring.cloud.stream.bindings.output.destination=posted
+spring.cloud.stream.bindings.output.destination=topicMessage
 spring.cloud.stream.default.contentType=application/json
