Non reactive version, using a draft of the code generation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-server.port=8080
+server.port=8097
 
 # kafka setting
 spring.cloud.stream.kafka.binder.brokers=localhost:9092
-spring.cloud.stream.bindings.output.destination=topicMessage
+
+# Renaming a topic
+# spring.cloud.stream.bindings.output.destination=topicMessage
+
 spring.cloud.stream.default.contentType=application/json
