--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-stream-reactive'
+	implementation 'org.springframework.cloud:spring-cloud-stream'
 
 	// junit 5
 	testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
