--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.cloud.stream.kafka.binder.brokers=localhost:9092
 # spring.cloud.stream.bindings.output.destination=topicMessage
 
 spring.cloud.stream.default.contentType=application/json
+
+
+#spring.cloud.stream.default.producer.partitioned=true
+spring.cloud.stream.default.producer.partitionKeyExpression=headers['partitionKey']
+spring.cloud.stream.default.producer.partitionCount=2
